# esp32-co2-station

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README-en.md  README.md  partitions.csv  readme_change.md  readme_changed.md  requirements.txt  strukture_project.py
3dModel/: round-display-co2-case-clear-case-round-rear-cap-cut.3mf  round-display-co2-case-clear.3mf
components/dgx/: .clang-format  .gitignore  CHANGES.md  CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml
components/dgx/examples/screen_demo/: CMakeLists.txt  README.md
components/dgx/examples/screen_demo/main/: main.c
components/dgx/font2c/: font2c.c
components/dgx/include/: dgx_arch.h  dgx_arch_esp32.h  dgx_bitmap.h  dgx_bits.h  dgx_bw_page_screen.h  dgx_bw_screen.h  dgx_colors.h  dgx_draw.h  dgx_font.h  dgx_gauge.h  dgx_screen.h  dgx_screen_functions.h  dgx_screen_with_bus.h  dgx_spi_area_protocol.h
components/dgx/include/bus/: dgx_bus_protocols.h  dgx_i2c_esp32.h  dgx_p8_esp32.h  dgx_spi_esp32.h
components/dgx/include/drivers/: dgx_lcd_init.h  gc9a01.h  ili9341.h  ssd1306.h  ssd1351.h  st7565r.h  st7735.h  st7789.h  st7920.h  vscreen.h  vscreen_2h.h
components/dgx/include/fonts/: ArialRegular12.h  CasusDotView.h  DroidSansRegular9.h  IBMCGALight8x16Light8x1616.h  IBMPlexMonoMedium28.h  NotoMonoRegular28.h  TerminusTTFMedium12.h  VerdanaRegular32.h  WeatherDotView25.h  WeatherIconsRegular13.h  WeatherIconsRegular27.h
components/dgx/src/: bitmap.c  bw_screen.c  dgx_bus_optimized_funcs.c  dgx_spi_area_protocol.c  draw.c  font.c  font_morph.c  fontscan.py  gauge.c
components/dgx/src/bus/: dgx_p8_esp32_priv.h  dgx_spi_esp32_priv.h  i2c_esp32.c  p8_esp32.c  spi_esp32.c
components/dgx/src/drivers/: dgx_lcd_init.c  gc9a01.c  ili9341.c  ssd1306.c  ssd1351.c  st7565r.c  st7735.c  st7789.c  st7920.c  vscreen.c  vscreen_2h.c  vscreen_bw_functions.c
components/dgx/src/fonts/: ArialRegular12.c  CasusDotView.c  DroidSansRegular9.c  IBMPlexMonoMedium28.c  NotoMonoRegular28.c  VerdanaRegular32.c  fonts.txt
components/scd4x/: .gitignore  CHANGES.md  CMakeLists.txt  README.md  idf_component.yml
components/scd4x/examples/: CMakeLists.txt  example_main.c
components/scd4x/include/: scd4x.h
components/scd4x/src/: scd4x.c
main/: CMakeLists.txt  app_fonts.c  app_fonts.h  app_mqtt.c  app_mqtt.h  app_settings.c  app_settings.h  app_webserver.c  app_webserver.h  idf_component.yml  main.c  provisioning.c  provisioning.h  str.c  str.h  tzones.c  tzones.h
misc/: generate_tzones.py  index-bs.html  index.html  split_to_template.py
